# CHRONOS

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.engine  INSTALLATION_CHECKLIST.md  README.md  SETUP_GUIDE.md  __init__.py  check_missing.py  config.py  config.yaml.backup  create_placeholder_models.py  docker-compose.yml  engine-config.yaml  install.sh  logstash.yml  project.txt  pyproject.toml  requirements-misp.txt  requirements-prod.txt  setup.py  start.sh  test.sh  wazuh-install.sh
agent/: endpoint_agent.py
api/: main.py
backend_models/: alert.py
chronos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: config.yaml
core/analytics/: graph.py  identity.py  temporal.py
core/detection/: alert.py  engine.py
core/llm/: __init__.py  client.py  models.py  orchestrator.py  parsers.py  prompts.py
core/llm/adapters/: __init__.py  anthropic.py  azure.py  base.py  deepseek.py  ollama.py  openai.py  registry.py
core/llm/utils/: __init__.py  cache.py  env_loader.py  (+1 more)
core/ml/: models.py
core/threat_intel/: client.py  enrichment_pipeline.py
dashboards/: grafana-datasources.yml  network-traffic.json  security-overview.json
data/: orchestrator.py
data/collectors/: elasticsearch_client.py
data/pipeline/: kafka_consumer.py  kafka_producer.py
detections/: __init__.py
detections/community/: __init__.py  sharing.py
detections/mitre/: __init__.py  mapping.py
detections/sigma/: __init__.py  engine.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
hunting/playbooks/: hunting_orchestrator.py
hypotheses/: hunting_hypotheses.json
migrations/: 001_initial.py  002_agents.py  003_hypotheses.py  004_response_actions.py
models/: README.md  __init__.py  agent.py  alert_prioritizer.pth  anomaly_detector.pkl  beaconing_lstm.pth  dga_classifier.pth  graph_analyzer.pth
pipeline/: logstash-alerts.conf  logstash-events.conf
scripts/: event_sender.py  run.py  setup_threat_intel.sh  train_real_models.py
soar/actions/: response_actions.py
soar/orchestration/: response_orchestrator.py
tests/: conftest.py  test_chronos.py  test_suite.py
visualization/: dashboard.py
(+27 files in other folders)
